--- a/about.html
+++ b/about.html
@@ -31,16 +31,16 @@
   </button>
 
   <nav class="nav-links">
-    <a href="about.html">About Me</a>
+    <a href="about.html">About</a>
 
     <div class="dropdown">
-      <button class="dropbtn" data-dropdown="projects">
-        Projects <span class="arrow">▾</span>
+      <button class="dropbtn" data-dropdown="ACS">
+        Library <span class="arrow">▾</span>
       </button>
-      <div class="dropdown-menu" id="projects">
-        <a href="#project1">Project 1</a>
-        <a href="#project2">Project 2</a>
-        <a href="#project3">Project 3</a>
+      <div class="dropdown-menu" id="ACS">
+        <a href="gallery.html">AC Sightings Gallery</a>
+        <a href="#project2">My AC Videos</a>
+        <a href="#project3">idk</a>
       </div>
     </div>
 
@@ -67,15 +67,23 @@
 
 
 
+
   <title>About Me — kunhvac_id</title>
 
   <style>
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: #0f0f0f;
-      color: #ffffff;
-    }
+  body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.7), rgba(49, 102, 163, 0.4)),
+    url("https://kunhvacid.github.io/ac/IMG_20251228_112338.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: #ffffff;
+}
+
 
     /* NAVBAR (reuse style) */
     .navbar {
