--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
   </button>
 
   <nav class="nav-links">
-    <a href="about.html">About Me</a>
+    <a href="about.html">About</a>
 
     <div class="dropdown">
-      <button class="dropbtn" data-dropdown="projects">
-        Projects <span class="arrow">▾</span>
+      <button class="dropbtn" data-dropdown="ACS">
+        Library <span class="arrow">▾</span>
       </button>
-      <div class="dropdown-menu" id="projects">
-        <a href="#project1">Project 1</a>
-        <a href="#project2">Project 2</a>
-        <a href="#project3">Project 3</a>
+      <div class="dropdown-menu" id="ACS">
+        <a href="gallery.html">AC Sightings Gallery</a>
+        <a href="#project2">My AC Videos</a>
+        <a href="#project3">idk</a>
       </div>
     </div>
 
