--- a/gallery.html
+++ b/gallery.html
@@ -8,50 +8,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<!-- NAVBAR -->
-<header class="navbar">
-  <a href="index.html" class="logo">
-    <img src="https://media.discordapp.net/attachments/1388309054061023342/1464953466668585113/kunhvac_id_150_x_150_px_800_x_139_px_20260125_192814_0000.png" alt="Logo">
-  </a>
-
-  <button class="hamburger" aria-label="Menu" aria-expanded="false">☰</button>
-
-  <nav class="nav-links">
-    <a href="about.html">About</a>
-
-    <div class="dropdown">
-      <button class="dropbtn" data-dropdown="ACS">Library ▾</button>
-      <div class="dropdown-menu" id="ACS">
-        <a href="gallery.html">AC Sightings Gallery</a>
-      </div>
-    </div>
-
-    <div class="dropdown">
-      <button class="dropbtn" data-dropdown="social">Social ▾</button>
-      <div class="dropdown-menu" id="social">
-        <a href="https://youtube.com/@kunhvac_id" target="_blank">YouTube</a>
-        <a href="https://instagram.com" target="_blank">Instagram</a>
-        <a href="https://github.com" target="_blank">GitHub</a>
-      </div>
-    </div>
-  </nav>
-</header>
-
-<!-- HERO -->
 <section class="gallery-hero">
   <h1>AC Sightings Library</h1>
   <p>Public archive of air conditioner sightings</p>
 </section>
 
-<!-- FILTERS (ONLY ONE SET) -->
 <section class="gallery-controls">
-  <input type="text" id="searchInput" placeholder="Search tags, brand, model">
+  <input
+    type="text"
+    id="searchInput"
+    placeholder="Search tags, brand, model, location"
+  >
 
   <select id="locationFilter">
     <option value="all">All locations</option>
@@ -59,6 +31,14 @@
 
   <select id="deviceFilter">
     <option value="all">All devices</option>
+  </select>
+
+  <select id="oemFilter">
+    <option value="all">All OEMs</option>
+  </select>
+
+  <select id="rarityFilter">
+    <option value="all">All rarities</option>
   </select>
 
   <select id="sortFilter">
@@ -69,17 +49,14 @@
   </select>
 </section>
 
-<!-- GALLERY -->
 <section class="gallery-grid" id="gallery"></section>
 
-<!-- MODAL -->
 <div id="modal" class="modal">
   <span class="close">×</span>
   <img id="modal-img">
   <div id="modal-meta"></div>
 </div>
 
-<!-- VIDEOS -->
 <section class="video-section">
   <h2>AC Videos</h2>
   <iframe
@@ -88,44 +65,7 @@
   </iframe>
 </section>
 
-<!-- FOOTER -->
-<footer class="site-footer">
-  <div class="footer-top">
-    <span class="footer-logo">kunhvac_id</span>
-  </div>
-  <hr />
-  <div class="footer-bottom">
-    <p>© 2026 kunhvac_id | All Rights Reserved.</p>
-  </div>
-</footer>
-
-<!-- SCRIPTS -->
 <script src="gallery.js" defer></script>
-
-<script>
-  const buttons = document.querySelectorAll(".dropbtn");
-  const menus = document.querySelectorAll(".dropdown-menu");
-  const hamburger = document.querySelector(".hamburger");
-  const nav = document.querySelector(".nav-links");
-
-  buttons.forEach(btn => {
-    btn.addEventListener("click", e => {
-      e.stopPropagation();
-      const menu = document.getElementById(btn.dataset.dropdown);
-      menus.forEach(m => m.classList.remove("active"));
-      menu.classList.toggle("active");
-    });
-  });
-
-  document.addEventListener("click", () =>
-    menus.forEach(m => m.classList.remove("active"))
-  );
-
-  hamburger.addEventListener("click", () => {
-    const expanded = nav.classList.toggle("open");
-    hamburger.setAttribute("aria-expanded", expanded);
-  });
-</script>
 
 </body>
 </html>
