--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 <header class="navbar">
   <a href="index.html" class="logo">
-    <img src="https://kunhvacid.github.io/ac/kunhvac_id (150 x 150 px) (800 x 139 px)_20260125_192814_0000.pngossless&width=1856&height=322" alt="Logo">
+    <img src="https://kunhvacid.github.io/ac/kunhvac_id (150 x 150 px) (800 x 139 px)_20260125_192814_0000.png" alt="Logo">
   </a>
 
 <button class="hamburger" aria-label="Menu" aria-expanded="false">
@@ -298,4 +298,5 @@
 
 </body>
 </html>
+
 
