--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <body>
 <header class="navbar">
   <a href="index.html" class="logo">
-    <img src="https://media.discordapp.net/attachments/1388309054061023342/1464953466668585113/kunhvac_id_150_x_150_px_800_x_139_px_20260125_192814_0000.png?ex=697757bb&is=6976063b&hm=08ea5fb78ec3175874ad177298d5de9616b6074aff74dc36813864139c80c2b0&=&format=webp&quality=lossless&width=1856&height=322" alt="Logo">
+    <img src="https://kunhvacid.github.io/ac/kunhvac_id_logo.png" alt="Logo">
   </a>
 
 <button class="hamburger" aria-label="Menu" aria-expanded="false">
