--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+1<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -7,6 +7,68 @@
   <link rel="stylesheet" href="gallery.css" />
 </head>
 <body>
+
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>kunhvac_about</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
+
+
+  <link rel="stylesheet" href="style.css" />
+
+
+
+
+
+
+
+
+</head>
+<body>
+<header class="navbar">
+  <a href="index.html" class="logo">
+    <img src="https://kunhvacid.github.io/ac/kunhvac_id_logo.png" alt="Logo">
+  </a>
+
+<button class="hamburger" aria-label="Menu" aria-expanded="false">
+    ☰
+  </button>
+
+  <nav class="nav-links">
+    <a href="about.html">About</a>
+
+    <div class="dropdown">
+      <button class="dropbtn" data-dropdown="ACS">
+        Library <span class="arrow">▾</span>
+      </button>
+      <div class="dropdown-menu" id="ACS">
+        <a href="gallery.html">AC Sightings Gallery</a>
+        <a href="#project2">My AC Videos</a>
+        <a href="#project3">idk</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+      <button class="dropbtn" data-dropdown="social">
+        Social <span class="arrow">▾</span>
+      </button>
+      <div class="dropdown-menu" id="social">
+        <a href="https://youtube.com/@kunhvac_id" target="_blank">YouTube</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://github.com" target="_blank">GitHub</a>
+      </div>
+    </div>
+  </nav>
+
+
+
+
 
 <header class="gallery-hero">
   <h1>AC Sightings Library</h1>
