--- a/gallery.html
+++ b/gallery.html
@@ -1,44 +1,30 @@
-1<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AC Sightings Gallery</title>
+  <title>kunhvac_gallery</title>
+
+  <!-- Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="gallery.css" />
 </head>
+
 <body>
 
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>kunhvac_about</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-
-
-
-  <link rel="stylesheet" href="style.css" />
-
-
-
-
-
-
-
-
-</head>
-<body>
+<!-- NAVBAR (added) -->
 <header class="navbar">
   <a href="index.html" class="logo">
     <img src="https://kunhvacid.github.io/ac/kunhvac_id_logo.png" alt="Logo">
   </a>
 
-<button class="hamburger" aria-label="Menu" aria-expanded="false">
-    ☰
-  </button>
+  <button class="hamburger" aria-label="Menu" aria-expanded="false">☰</button>
 
   <nav class="nav-links">
     <a href="about.html">About</a>
@@ -65,56 +51,39 @@
       </div>
     </div>
   </nav>
-
-
-
-
-
-<header class="gallery-hero">
-  <h1>AC Sightings Library</h1>
-  <p>Public archive of air conditioner sightings</p>
 </header>
 
+<!-- FILTER BAR -->
 <section class="gallery-controls">
-  <input id="search" type="text" placeholder="Search (brand, model, tags…)" />
+  <input type="text" id="search" placeholder="Search…">
 
-  <select id="locationFilter">
-    <option value="">All locations</option>
-  </select>
-
-  <select id="deviceFilter">
-    <option value="">All devices</option>
-  </select>
-
-  <select id="brandFilter">
-    <option value="">All brands</option>
-  </select>
-
-  <select id="oemFilter">
-    <option value="">All OEMs</option>
-  </select>
-
-  <select id="rarityFilter">
-    <option value="">All rarities</option>
-  </select>
+  <select id="brandFilter"></select>
+  <select id="oemFilter"></select>
+  <select id="rarityFilter"></select>
+  <select id="locationFilter"></select>
+  <select id="deviceFilter"></select>
 
   <select id="sort">
-    <option value="newest">Newest first</option>
-    <option value="oldest">Oldest first</option>
-    <option value="az">Location A–Z</option>
-    <option value="za">Location Z–A</option>
+    <option value="newest">Newest</option>
+    <option value="oldest">Oldest</option>
+    <option value="az">Brand A–Z</option>
+    <option value="za">Brand Z–A</option>
   </select>
 </section>
 
-<section id="gallery" class="gallery-grid"></section>
+<!-- GALLERY GRID -->
+<main id="gallery" class="gallery-grid"></main>
 
 <!-- MODAL -->
 <div id="modal" class="modal">
-  <span class="close">×</span>
-  <img id="modal-img">
+  <span class="close">&times;</span>
+  <img id="modal-img" />
   <div id="modal-meta"></div>
 </div>
 
+<!-- JS -->
 <script src="gallery.js"></script>
+<script src="nav.js"></script>
+
 </body>
 </html>
