--- a/gallery.html
+++ b/gallery.html
@@ -53,6 +53,27 @@
   </nav>
 </header>
 
+
+
+  <style>
+  body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.7), rgba(49, 102, 163, 0.4)),
+    url("https://kunhvacid.github.io/ac/IMG_20251228_112338.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: #ffffff;
+}
+</style>
+
+
+
+
+
 <!-- FILTER BAR -->
 <section class="gallery-controls">
 
@@ -186,6 +207,8 @@
     hamburger.setAttribute("aria-expanded", expanded);
   });
 </script>
+
+
 
 </body>
 </html>
