--- a/gallery.html
+++ b/gallery.html
@@ -123,6 +123,9 @@
 <!-- GALLERY GRID -->
 <main id="gallery" class="gallery-grid"></main>
 
+<div id="pagination" class="pagination"></div>
+
+
 <!-- MODAL -->
 <div id="modal" class="modal">
   <span class="close">&times;</span>
@@ -207,6 +210,10 @@
     hamburger.setAttribute("aria-expanded", expanded);
   });
 </script>
+
+
+
+
 
 </body>
 </html>
