--- a/gallery.html
+++ b/gallery.html
@@ -130,7 +130,17 @@
 <div id="modal" class="modal">
   <span class="close">&times;</span>
   <img id="modal-img" />
-  <div id="modal-meta"></div>
+  <div class="nav-arrow prev">❮</div>
+<div class="nav-arrow next">❯</div>
+<div class="modal-info">
+  <div class="info-grid">
+    <p><strong>Brand:</strong> GREE</p>
+    <p><strong>OEM:</strong> Inhouse</p>
+    <p><strong>Rarity:</strong> Very Rare</p>
+    <p><strong>Location:</strong> Yogyakarta</p>
+    <p><strong>Device:</strong> Redmi Note 12 Pro 5G</p>
+    <p><strong>Notes:</strong> Split AC, Standard, China, 2.0 HP</p>
+  </div>
 </div>
 
 <!-- JS -->
@@ -210,7 +220,6 @@
     hamburger.setAttribute("aria-expanded", expanded);
   });
 </script>
-
 
 
 
