--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 
+
+
+
+  
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="gallery.css" />
@@ -46,12 +50,16 @@
 <body>
 
 <!-- NAVBAR -->
+</head>
+<body>
 <header class="navbar">
   <a href="index.html" class="logo">
     <img src="https://kunhvacid.github.io/ac/kunhvac_id_logo.png" alt="Logo">
   </a>
 
-  <button class="hamburger" aria-label="Menu" aria-expanded="false">☰</button>
+<button class="hamburger" aria-label="Menu" aria-expanded="false">
+    ☰
+  </button>
 
   <nav class="nav-links">
     <a href="about.html">About</a>
@@ -166,6 +174,50 @@
 <!-- JS -->
 <script src="gallery.js"></script>
 <script src="nav.js"></script>
+
+<script>
+  const buttons = document.querySelectorAll(".dropbtn");
+  const menus = document.querySelectorAll(".dropdown-menu");
+  const hamburger = document.querySelector(".hamburger");
+  const nav = document.querySelector(".nav-links");
+
+  buttons.forEach(btn => {
+    btn.addEventListener("click", e => {
+      e.stopPropagation();
+
+      const menu = document.getElementById(btn.dataset.dropdown);
+
+      menus.forEach(m => {
+        if (m !== menu) m.classList.remove("active");
+      });
+
+      buttons.forEach(b => b.classList.remove("active"));
+
+      const isOpen = menu.classList.toggle("active");
+      btn.classList.toggle("active", isOpen);
+    });
+
+    btn.addEventListener("keydown", e => {
+      if (e.key === "Enter" || e.key === " ") btn.click();
+      if (e.key === "Escape") closeAll();
+    });
+  });
+
+  function closeAll() {
+    menus.forEach(m => m.classList.remove("active"));
+    buttons.forEach(b => b.classList.remove("active"));
+  }
+
+  document.addEventListener("click", closeAll);
+
+  hamburger.addEventListener("click", () => {
+    const expanded = nav.classList.toggle("open");
+    hamburger.setAttribute("aria-expanded", expanded);
+  });
+</script>
+
+
+
 
 </body>
 </html>
