--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   background:
-    linear-gradient(rgba(0, 0, 0, 0.7), rgba(49, 102, 163, 0.4)),
+    linear-gradient(rgba(0, 0, 0, 0.8), rgba(26, 54, 87, 0.6)),
     url("https://kunhvacid.github.io/ac/IMG_20251228_112338.jpg");
   background-size: cover;
   background-position: center;
@@ -177,12 +177,23 @@
 
     <p>
       I am air conditioner & fan* enthusiast. Uhh yeah idk what else to say<br>
-      Based in  <a href="https://www.google.com/search?q=indonesia&oq=indonesia" target="_blank">Indonesia</a>, i'll let you guess the precise location.<br>
-      <br>
-      Est. June 12th, 2024.
+      Based in  <a href="https://www.google.com/search?q=indonesia" target="_blank">Indonesia</a>, i'll let you guess the precise location.<br>
     </p>
+    <br>
 
-    <h2>My air conditioners if you're curious</h2>
+ <h2>How "kunhvac_id" was made</h2>
+    <p>
+      I was inspired from big AC content creators like <a href="hhttps://youtube.com/@kunhvac_id" target="_blank">TheExtremeFanEnthusiast</a> to create my own channel all about Air Conditioning.<br>Initially, I didn't know what to name myself, but then i remembered that i had an older youtube channel by the name <a href="https://www.youtube.com/channel/UCyS7U3v1CqDPlaz5fPGUhnA/" target="_blank">"kunmung"</a>. Then I combined it with the word <a href="https://www.google.com/search?q=hvac" target="_blank">"HVAC"</a>.<br>
+      And thus, in June 12th, 2024. <a href="https://youtube.com/@kunhvac_id" target="_blank">"kunhvac_id"</a> was born.<br>
+      My channel started to get quite popular when I started to test/review air conditioners using Mi Remote. If you don't know; its an app that turns your phone into a universal remote, for almost ANY device that uses an IR reciever. Your phone must have an IR blaster to use this app, but lucklily my phone was a Redmi.
+
+
+ <h2>How to pronounce "kunhvac_id"</h2>
+    <p>
+      Many people butcher my name, so heres how to pronounce it:<br>kun·H-V-A-C<br>I-D<br><a href="https://www.google.com/search?q=hvac" target="_blank">HVAC</a> stands for Heating, Ventillation, Air Conditioning.
+
+
+    <h2>My air conditioners</h2>
     <p>
       • <a href="https://youtube.com/watch/PiG7CxI8GTk" target="_blank">Sharp "Sayonara Panas V" Plasmacluster 0.5 HP | AH-AP5MHL/AU-AP5MLY (might be replaced soon)</a><br>
       • <a href="https://youtube.com/watch/23ZaQjcrBes" target="_blank">Panasonic "Low Watt" 0.5 HP | CS/CU-XN5RKJ</a><br>
@@ -191,10 +202,14 @@
       • <a href="https://youtube.com/watch/0UzdN8xWg8A" target="_blank">Panasonic 0.5 HP | CS/CU-YN5WKJ</a><br>
       • <a href="https://youtube.com/watch/5q8TeTWCykI" target="_blank">AQUA (Haier) 0.5 HP | AQA-KCR05FQAL</a><br>
 
+     <h2>Other Random facts about "kunhvac_id"</h2>
+    <p>
+      • A person who uses EVERY feature on an Air Conditioner (including timer)<br>
+      • kpop stan [<a href="https://www.google.com/search?q=twice+once" target="_blank">ONCE</a>, <a href="https://www.google.com/search?q=loona+orbit" target="_blank">Orbit</a> (late), <a href="https://www.google.com/search?q=OURII" target="_blank">OURII</a>, <a href="https://www.google.com/search?q=wiz*one" target="_blank">WIZ*ONE</a> (late), <a href="https://www.google.com/search?q=ive+dive" target="_blank">DIVE</a>, <a href="https://www.google.com/search?q=triples+wav" target="_blank">WAV</a>, <a href="https://www.google.com/search?q=rescene+remine" target="_blank">REMINE</a>, <a href="https://www.google.com/search?q=hearts2hearts+s2u" target="_blank">S2U</a>]
+
     <h2>Why this site exists</h2>
     <p>
-      For a school project.<br>
-      Made with 99% ChatGPT (dont worry its was allowed)
+      For a school project.
     </p>
 
   </main>
