--- a/gallery.html
+++ b/gallery.html
@@ -122,6 +122,8 @@
 
   <div class="filter-group">
     <label for="sort">Sort</label>
+    <select id="unitFilter"></select>
+
     <select id="sort">
       <option value="newest">Newest</option>
       <option value="oldest">Oldest</option>
