--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,6 @@
 
 <body>
 
-<!-- NAVBAR -->
 </head>
 <body>
 <header class="navbar">
@@ -70,8 +69,8 @@
       </button>
       <div class="dropdown-menu" id="ACS">
         <a href="gallery.html">AC Sightings Gallery</a>
-        <a href="#project2">My AC Videos</a>
-        <a href="#project3">idk</a>
+        <a href="#project2">My AC Videos (WIP)</a>
+        <a href="#project3">WIP</a>
       </div>
     </div>
 
@@ -79,14 +78,15 @@
       <button class="dropbtn" data-dropdown="social">
         Social <span class="arrow">▾</span>
       </button>
-      <div class="dropdown-menu" id="social">
+      <div class="dropdown-menu" id="Social">
         <a href="https://youtube.com/@kunhvac_id" target="_blank">YouTube</a>
-        <a href="https://instagram.com" target="_blank">Instagram</a>
-        <a href="https://github.com" target="_blank">GitHub</a>
+        <a href="https://www.instagram.com/kunhvac_id?igsh=MXE5cGNsOWl3OXd5aw==" target="_blank">Instagram</a>
+        <a href="https://www.tiktok.com/@kunhvac_id?_t=ZS-8sze2pMPyp6&_r=1" target="_blank">TikTok</a>
       </div>
     </div>
   </nav>
 </header>
+
 
 <!-- FILTER BAR -->
 <section class="gallery-controls">
