--- a/gallery.html
+++ b/gallery.html
@@ -134,10 +134,31 @@
 </section>
 
 <!-- GALLERY -->
-<main>
-  <section id="gallery" class="gallery-grid"></section>
-  <div id="pagination" class="pagination"></div>
-</main>
+<div id="pagination-wrapper">
+  <div id="pageStatus"></div>
+
+  <div id="pagination"></div>
+
+  <div id="photoStatus"></div>
+
+  <div class="page-controls">
+    <label>
+      Photos per page
+      <select id="perPage">
+        <option value="8">8</option>
+        <option value="16">16</option>
+        <option value="24">24</option>
+        <option value="40">40</option>
+      </select>
+    </label>
+
+    <label>
+      Go to page
+      <input id="gotoPage" type="number" min="1" />
+    </label>
+  </div>
+</div>
+
 
 <!-- MODAL -->
 <div id="modal" class="modal">
