--- a/gallery.html
+++ b/gallery.html
@@ -144,10 +144,10 @@
     <label>
       Photos per page
       <select id="perPage">
+        <option value="4">4</option>
         <option value="8">8</option>
         <option value="16">16</option>
-        <option value="24">24</option>
-        <option value="40">40</option>
+        <option value="24">24 (LAG)</option>
       </select>
     </label>
 
