--- a/gallery.html
+++ b/gallery.html
@@ -177,6 +177,13 @@
   </div>
 </div>
 
+<body>
+  <div class="page-wrapper">
+
+    
+  </div>
+</body>
+
 <!-- FOOTER -->
 <footer class="site-footer">
   <div class="footer-top">
